# SIMPLE_LOGGER

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
Functions_for_testing/: CMakeLists.txt  functions.cpp  functions.h
Testing_app/: main.cpp
Testing_file_logger/: CMakeLists.txt  main.cpp
Testing_file_logger/scripts/: clear_log_journal.sh
Testing_socket_logger/: CMakeLists.txt
Testing_socket_logger/client/: CMakeLists.txt  sending_main.cpp
Testing_socket_logger/libstatistics/: CMakeLists.txt  statistic.cpp  statistic.h
Testing_socket_logger/server/: CMakeLists.txt  reading_main.cpp  server.cpp  server.h
docs/: README.md
liblogger/: CMakeLists.txt  Logger.cpp  Logger.h
unit_tests/: CMakeLists.txt  main_test.cpp  testing.h
